refactor(사진 업로드): S3 업로드 함수 변경
기존 함수의 검증을 제거하고 쉽게 만들었음